turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:8: error: value unary_! is not a member of java.awt.Color
while(!getCouleurSol()==colors(n)){
      ^